script extenal file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 </head>
 <body>
 
-  <script>
-    console.log("Hello, I´m javascript");
-  </script>
 
-
+  <script src="foundations/script01.js"></script>
 </body>
 </html>
